[package]
name = "expensify"
version = "0.1.0"
authors = ["David Spadea <dave@spadea.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version="^0.10", features=["rustls-tls", "blocking"] }
serde = {version="^1", features=["derive"] }
serde_json = "^1"

simple_logger = "^1.4"
log = "^0.4"
